--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,18 +12,6 @@ exclude_patterns:
 - "**/vendor/"
 - "**/*_test.go"
 - "**/*.d.ts"
-- "project/views.py"
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+- "app/views.py"
   
   
