--- a/.coveragerc
+++ b/.coveragerc
@@ -5,4 +5,8 @@ omit =
     */__init__.py
     *__init__.py
     */tests/__init__.py 
+    */models/*
+    */tests/*
+    */Database/*
+    *validator.py
    
