--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,19 @@ language : python
 version :
   - 3.6
 
+service :
+  - postgresql
+
+env:
+ global:
+  - db='testdb'
+
 install:
   - pip install -r requirements.txt
+
+before_script:
+ - "psql -c 'create database testdb;' -U postgres"
+
 
 script:
   - pytest --cov=.
