--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-astroid==1.6.5
+astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
 autopep8==1.4.3
@@ -21,10 +21,11 @@ MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==4.3.0
 pluggy==0.8.0
+psycopg2==2.7.6.1
 py==1.7.0
 pycodestyle==2.4.0
 PyJWT==1.7.1
-pylint==1.9.4
+pylint==2.2.2
 pytest==4.0.2
 pytest-cov==2.6.0
 requests==2.21.0
