--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ service :
   - postgresql
 
 env:
- global:
-  - db='testdb'
+  global:
+    - db='testdb'
 
 install:
   - pip install -r requirements.txt
 
 before_script:
- - "psql -c 'create database testdb;' -U postgres"
+ - "psql -c 'CREATE DATABASE testdb;' -U postgres"
 
 
 script:
